--- a/syllabus/cs380F2014-syllabus.tex
+++ b/syllabus/cs380F2014-syllabus.tex
@@ -1,3 +1,6 @@
+%!TEX root=cs380F2014-syllabus.tex
+% mainfile: cs380F2014-syllabus.tex 
+
 \input{syllabuspre.tex}
 
 \usepackage[compact]{titlesec}
@@ -17,12 +20,12 @@ Dr.\ Gregory M.\ Kapfhammer\\
 \subsection*{Instructor's Office Hours}
 
 \begin{itemize}
-	\itemsep 0em
-	\item Monday: 1:00 pm -- 2:30 pm (30 minute time slots)
-	\item Tuesday: 2:30 pm -- 4:00 pm (15 minute time slots)
-	\item Wednesday: 4:30 pm -- 5:00 pm (15 minute time slots)
-	\item Thursday: 9:00 am -- 10:00 am (15 minute time slots) {\em and} \\ \hspace*{.69in} 2:30 pm -- 4:00 pm (15 minute time slots)
-	\item Friday: 1:00 pm -- 2:30 pm (10 minute time slots) {\em and} \\ \hspace*{.49in} 4:30 pm -- 5:00 pm (5 minute time slots)
+  \itemsep 0em
+  \item Monday: 1:00 pm -- 2:30 pm (30 minute time slots)
+  \item Tuesday: 2:30 pm -- 4:00 pm (15 minute time slots)
+  \item Wednesday: 4:30 pm -- 5:00 pm (15 minute time slots)
+  \item Thursday: 9:00 am -- 10:00 am (15 minute time slots) {\em and} \\ \hspace*{.69in} 2:30 pm -- 4:00 pm (15 minute time slots)
+  \item Friday: 1:00 pm -- 2:30 pm (10 minute time slots) {\em and} \\ \hspace*{.49in} 4:30 pm -- 5:00 pm (5 minute time slots)
 \end{itemize}
 
 \noindent
@@ -40,12 +43,12 @@ Final Examination: Friday, December 13, 2013 at 9:00 am
 
 \begin{quote}
 
-	A study of the principles and concepts used in the specification, design, implementation, testing, and maintenance
-	of large software systems. Topics include requirements elicitation and analysis, formal specification, software
-	architectures, object-oriented design, software measurement, software testing and analysis, and evolution of a
-	program.  Students practice the principles of software development by participating as group members in the creation
-	of a significant software application. One laboratory per week. Prerequisites: Computer Science 210 and 220 or
-	permission of the instructor. \\ {\em Offered in alternate years}.
+  A study of the principles and concepts used in the specification, design, implementation, testing, and maintenance
+  of large software systems. Topics include requirements elicitation and analysis, formal specification, software
+  architectures, object-oriented design, software measurement, software testing and analysis, and evolution of a
+  program.  Students practice the principles of software development by participating as group members in the creation
+  of a significant software application. One laboratory per week. Prerequisites: Computer Science 210 and 220 or
+  permission of the instructor. \\ {\em Offered in alternate years}.
 
 \end{quote}
 
@@ -66,7 +69,7 @@ At the completion of this class, a student should be aware of the fundamental ch
 development.  Furthermore, students should be comfortable with a wide array of concepts, methodologies, techniques, and
 tools that they can apply to the problem of developing large software systems.  However, a successful student will
 emerge with more than an understanding of the tools (e.g., text editors, compilers, debuggers, integrated development
-environments, and version control systems) that a software engineer uses.  A student also should have a fundamental
+  environments, and version control systems) that a software engineer uses.  A student also should have a fundamental
 understanding of the major software life cycles and the activities that take place in each phase of these life cycles.
 Finally, a student should have a basic understanding of some of the current research and the open research questions in
 the field of software engineering.  After completing this class, a student should be equipped for further graduate study
@@ -87,14 +90,14 @@ real-world software development projects by adeptly using modern software tools 
 Fourth Edition, ISBN-10: 0136061699, ISBN-13: 978-0136061694, 792 pages, 2009. \\
 (References to the textbook are abbreviated as ``SETP'' in the syllabus and on the Web site).
 
- % The Mythical Man-Month: Essays on Software Engineering, Anniversary
- %  Edition (2nd Edition) [Paperback]
- %  Author: Frederick P. Brooks
- %  Publisher: Addison-Wesley Professional; Anniversary edition (August 12, 1995)
- %  ISBN-10: 0201835959
- %  ISBN-13: 978-0201835953
- %  Status: Required
- %  25 copies
+% The Mythical Man-Month: Essays on Software Engineering, Anniversary
+%  Edition (2nd Edition) [Paperback]
+%  Author: Frederick P. Brooks
+%  Publisher: Addison-Wesley Professional; Anniversary edition (August 12, 1995)
+%  ISBN-10: 0201835959
+%  ISBN-13: 978-0201835953
+%  Status: Required
+%  25 copies
 
 \noindent{\em The Mythical Man Month}. Frederick P.\ Brooks, Jr.
 Second Edition, ISBN-10: 0201835959, ISBN-13: 978-0201835953, 336 pages, 1985. \\
@@ -122,14 +125,14 @@ approximate and, if the need to do so presents itself, it is possible for the as
 academic semester. 
 
 \begin{center}
-\begin{tabular}{ll}
-Class Participation and Instructor Meetings & 5\% \\
-First Examination & 15\% \\
-Second Examination & 15\% \\
-Final Examination & 20\% \\
-Laboratory and Homework Assignments & 30\% \\
-Final Project & 15\%
-\end{tabular}
+  \begin{tabular}{ll}
+    Class Participation and Instructor Meetings & 5\% \\
+    First Examination & 15\% \\
+    Second Examination & 15\% \\
+    Final Examination & 20\% \\
+    Laboratory and Homework Assignments & 30\% \\
+    Final Project & 15\%
+  \end{tabular}
 \end{center}
 
 \vspace*{-.1in}
@@ -140,46 +143,46 @@ These grading categories have the following definitions:
 
 \begin{itemize}
 
-	\item {\em Class Participation and Instructor Meetings}: All students are required to actively participate during
-		all of the class sessions. Your participation will take forms such as answering questions about the required
-		reading assignments, asking constructive questions of your group members, giving presentations, and leading a
-		discussion session. Furthermore, all students are required to meet with the course instructor during office
-		hours for a total of sixty minutes during the Fall 2013 semester.  These meetings must be scheduled through the
-		course instructor's reservation system and documented on a meeting record that you submit on the day of the final
-		examination. A student will receive an interim and final grade for this category.
+  \item {\em Class Participation and Instructor Meetings}: All students are required to actively participate during
+    all of the class sessions. Your participation will take forms such as answering questions about the required
+    reading assignments, asking constructive questions of your group members, giving presentations, and leading a
+    discussion session. Furthermore, all students are required to meet with the course instructor during office
+    hours for a total of sixty minutes during the Fall 2013 semester.  These meetings must be scheduled through the
+    course instructor's reservation system and documented on a meeting record that you submit on the day of the final
+    examination. A student will receive an interim and final grade for this category.
 
-	\item {\em First and Second Examinations}: The first and second interim examinations will cover all of the material
-		in their associated module(s).  While the second examination is not cumulative, it will assume that a student has a
-		basic understanding of the material that was the focus of the first examination.  The date for the first and
-		second examinations will be announced at least one week in advance of the scheduled date.  Unless prior
-		arrangements are made with the course instructor, all students will be expected to take these examinations on the
-		scheduled date and complete the tests in the stated period of time.
+  \item {\em First and Second Examinations}: The first and second interim examinations will cover all of the material
+    in their associated module(s).  While the second examination is not cumulative, it will assume that a student has a
+    basic understanding of the material that was the focus of the first examination.  The date for the first and
+    second examinations will be announced at least one week in advance of the scheduled date.  Unless prior
+    arrangements are made with the course instructor, all students will be expected to take these examinations on the
+    scheduled date and complete the tests in the stated period of time.
 
-	\item {\em Final Examination}: The final examination is a three-hour cumulative test.  By enrolling in this course,
-		students agree that, unless there are extenuating circumstances, they will take the final examination at the
-		time stated on the first page of the syllabus.
+  \item {\em Final Examination}: The final examination is a three-hour cumulative test.  By enrolling in this course,
+    students agree that, unless there are extenuating circumstances, they will take the final examination at the
+    time stated on the first page of the syllabus.
 
-	\item {\em Laboratory and Homework Assignments}: These assignments invite students to explore the concepts, tools,
-		and techniques that are associated with different phases of the software development life cycle.  All of the
-		laboratory assignments require the use of the provided tools to design, implement, test, and maintain programs
-		that solve important problems.  To ensure that students are ready to develop software in both other classes at
-		Allegheny College and after graduation, the instructor will assign individuals to teams for each of the
-		laboratory assignments.  Unless specified otherwise, each laboratory assignment will be due at the beginning of
-		the next laboratory session.  Many of the laboratory assignments in this course will expect students to
-		give both a presentation and a demonstration of the software that they specified, designed, implemented, tested,
-		and documented.  
-	
-		%%% Homework assignments will normally ask students to prepare short written documents reflecting on
-		% facets of the software development life cycles.
+  \item {\em Laboratory and Homework Assignments}: These assignments invite students to explore the concepts, tools,
+    and techniques that are associated with different phases of the software development life cycle.  All of the
+    laboratory assignments require the use of the provided tools to design, implement, test, and maintain programs
+    that solve important problems.  To ensure that students are ready to develop software in both other classes at
+    Allegheny College and after graduation, the instructor will assign individuals to teams for each of the
+    laboratory assignments.  Unless specified otherwise, each laboratory assignment will be due at the beginning of
+    the next laboratory session.  Many of the laboratory assignments in this course will expect students to
+    give both a presentation and a demonstration of the software that they specified, designed, implemented, tested,
+    and documented.  
 
-	\item {\em Final Project}: This project will present you with the description of a problem and ask you to
-		implement a full-featured solution using one or more programming languages and a wide variety of software
-		development tools.  The final project in this class will require you to apply all of the knowledge and skills
-		that you have accumulated during the course of the semester to solve a problem and, whenever possible,
-		make your solution publicly available as a free and open-source tool.  The project will invite you to draw upon
-		both your problem solving skills and your knowledge of programming languages and software engineering tools. The
-		final project will be completed in groups assigned by the course instructor.
-		
+    %%% Homework assignments will normally ask students to prepare short written documents reflecting on
+    % facets of the software development life cycles.
+
+  \item {\em Final Project}: This project will present you with the description of a problem and ask you to
+    implement a full-featured solution using one or more programming languages and a wide variety of software
+    development tools.  The final project in this class will require you to apply all of the knowledge and skills
+    that you have accumulated during the course of the semester to solve a problem and, whenever possible,
+    make your solution publicly available as a free and open-source tool.  The project will invite you to draw upon
+    both your problem solving skills and your knowledge of programming languages and software engineering tools. The
+    final project will be completed in groups assigned by the course instructor.
+
 \end{itemize}
 
 \subsubsection*{Assignment Submission}
@@ -250,10 +253,10 @@ and to ensure that you can reliably send and receive emails. This class policy i
 
 \vspace*{-.1in}
 \begin{quote}
-``The use of email is a primary method of communication on campus. \ldots
-All students are provided with a campus email account and address while
-enrolled at Allegheny and are expected to check the account on a regular
-basis.'' 
+  ``The use of email is a primary method of communication on campus. \ldots
+  All students are provided with a campus email account and address while
+  enrolled at Allegheny and are expected to check the account on a regular
+  basis.'' 
 \end{quote}
 \vspace*{-.15in}
 
@@ -271,13 +274,13 @@ Please do this as soon as possible to ensure that approved accommodations are im
 The Academic Honor Program that governs the entire academic program at Allegheny College is described in the Allegheny
 Course Catalogue.  The Honor Program applies to all work that is submitted for academic credit or to meet non-credit
 requirements for graduation at Allegheny College.  This includes all work assigned for this class (e.g., examinations,
-laboratory assignments, and the final project).  All students who have enrolled in the College will work under the Honor
+  laboratory assignments, and the final project).  All students who have enrolled in the College will work under the Honor
 Program.  Each student who has matriculated at the College has acknowledged the following pledge:
 
 \vspace*{-.1in}
 \begin{quote}
-I hereby recognize and pledge to fulfill my responsibilities, as defined in the Honor Code, and to maintain the
-integrity of both myself and the College community as a whole.  
+  I hereby recognize and pledge to fulfill my responsibilities, as defined in the Honor Code, and to maintain the
+  integrity of both myself and the College community as a whole.  
 \end{quote}
 \vspace*{-.15in}
 
