--- a/syllabus/cs380F2014-syllabus.tex
+++ b/syllabus/cs380F2014-syllabus.tex
@@ -21,11 +21,12 @@ Dr.\ Gregory M.\ Kapfhammer\\
 
 \begin{itemize}
   \itemsep 0em
-  \item Monday: 1:00 pm -- 2:30 pm (30 minute time slots)
-  \item Tuesday: 2:30 pm -- 4:00 pm (15 minute time slots)
-  \item Wednesday: 4:30 pm -- 5:00 pm (15 minute time slots)
-  \item Thursday: 9:00 am -- 10:00 am (15 minute time slots) {\em and} \\ \hspace*{.69in} 2:30 pm -- 4:00 pm (15 minute time slots)
-  \item Friday: 1:00 pm -- 2:30 pm (10 minute time slots) {\em and} \\ \hspace*{.49in} 4:30 pm -- 5:00 pm (5 minute time slots)
+  \item Monday: 2:30 pm -- 4:30 pm (15 minute time slots)
+  \item Tuesday: 2:30 pm -- 4:30 pm (15 minute time slots)
+  \item Wednesday: 10:00 am -- 12:00 noon (15 minute time slots) {\em and} \\ \hspace*{.8in}
+    4:30 pm - 6:00 pm (15 minute time slots)
+  \item Thursday: 10:30 am - 11:00 am (10 minute time slots)
+  \item Friday: 11:00 am -- 12:00 noon (10 minute time slots) {\em and} \\ \hspace*{.49in} 3:30 pm -- 4:30 pm (10 minute time slots)
 \end{itemize}
 
 \noindent
