--- a/syllabus/cs380F2014-syllabus.tex
+++ b/syllabus/cs380F2014-syllabus.tex
@@ -54,14 +54,16 @@ Final Examination: Friday, December 12, 2014 at 9:00 am
 
 \subsection*{Course Objectives}
 
-The process of developing software involves the application of a number of interesting theories, tools, techniques, and
-methodologies.  In this class we will explore the phases of the major software development life cycles and examine the
-tools, concepts, challenges, and open questions associated with each phase.  Throughout the semester, we will examine
-the interplay between the theory and practice of software development.  We will delve into the details of software
-specification, design, implementation, testing, and maintenance through a discussion of book chapters and articles from
-the software engineering and software testing literature.  Moreover, students will enhance their ability to write about
-software in a clear and concise fashion.  Finally, students will gain practical software development experience in
-laboratory sessions and a final software development project.
+The essence of the discipline of computer science is algorithms; this course will introduce students to the principles
+of data management using algorithms.  We will investigate some of the key techniques that scientists use to manage data.
+Areas of discussion include, but are not limited to, relational databases and query languages, object-oriented data
+storage, encoding data in the eXtensible Markup Language (XML), low-level data storage, transactions and concurrency
+control, data warehousing and mining, and the implementation and testing of database applications.  The course will
+introduce students to the theory and practice of data management while covering both the well-established and the
+cutting-edge areas of the discipline.  The course also invites students to assess the correctness of their
+implementations and conduct both analytical and empirical evaluations of the performance of data management techniques.
+Finally, the course will ask students to implement small to moderate scale data management systems and to install and
+use a wide variety of support tools.
 
 \subsection*{Performance Objectives}
 
