Adding in the content for the course objectives.

--- a/syllabus/cs380F2014-syllabus.tex
+++ b/syllabus/cs380F2014-syllabus.tex
@@ -58,12 +58,14 @@ The essence of the discipline of computer science is algorithms; this course wil
 of data management using algorithms.  We will investigate some of the key techniques that scientists use to manage data.
 Areas of discussion include, but are not limited to, relational databases and query languages, object-oriented data
 storage, encoding data in the eXtensible Markup Language (XML), low-level data storage, transactions and concurrency
-control, data warehousing and mining, and the implementation and testing of database applications.  The course will
-introduce students to the theory and practice of data management while covering both the well-established and the
-cutting-edge areas of the discipline.  The course also invites students to assess the correctness of their
-implementations and conduct both analytical and empirical evaluations of the performance of data management techniques.
-Finally, the course will ask students to implement small to moderate scale data management systems and to install and
-use a wide variety of support tools.
+control, data warehousing and mining, and the implementation and testing of database applications.  
+
+The course will introduce students to the theory and practice of data management while covering both the
+well-established and the cutting-edge areas of the discipline.  The course also invites students to assess the
+correctness of their implementations and conduct both analytical and empirical evaluations of the performance of data
+management techniques.  Moreover, the course will ask students to implement small- and medium-scale data management
+systems and to install and use a wide variety of support tools. In addition to improving their ability teamwork skills,
+students will enhance their ability to write and speak about software in a clear and concise fashion. 
 
 \subsection*{Performance Objectives}
 
