Finished a draft of the performance objectives.

--- a/syllabus/cs380F2014-syllabus.tex
+++ b/syllabus/cs380F2014-syllabus.tex
@@ -69,6 +69,17 @@ will enhance their ability to write and speak about software in a clear and conc
 
 \subsection*{Performance Objectives}
 
+At the completion of this class, a student must be comfortable with fundamental data management topics and be aware of
+current research in the area.  When given a new data management problem, students should be able to select proper data
+management tools and implement a complete application that uses them to solve the stated problem.  Students also must
+develop a toolkit of data management concepts that they can use in the context of the solutions to large real-world
+problems.  Finally, students must develop and apply a strong knowledge of analytical and empirical techniques that they
+can use to characterize and predict the performance of data management systems.
+
+Students should also be able to handle many of the important, yet accidental, aspects of implementing programs with
+modern programming languages and data management systems.  In addition to being comfortable with program editors,
+compilers, debuggers, testing tools, virtual machines, database management systems, and query languages, students should
+also be able to understand the purpose of shell environment variables such as the {\tt PATH} and the {\tt CLASSPATH}.
 
 \subsection*{Required Textbooks}
 
