--- a/syllabus/cs380F2014-syllabus.tex
+++ b/syllabus/cs380F2014-syllabus.tex
@@ -91,22 +91,9 @@ also be able to understand the purpose of shell environment variables such as th
 %   Status: Required
 %   25 copies
 
-\noindent{\em Software Engineering: Theory and Practice}. Shari Lawrence Pfleeger and Joanne M. Atlee.
-Fourth Edition, ISBN-10: 0136061699, ISBN-13: 978-0136061694, 792 pages, 2009. \\
-(References to the textbook are abbreviated as ``SETP'' in the syllabus and on the Web site).
-
-% The Mythical Man-Month: Essays on Software Engineering, Anniversary
-%  Edition (2nd Edition) [Paperback]
-%  Author: Frederick P. Brooks
-%  Publisher: Addison-Wesley Professional; Anniversary edition (August 12, 1995)
-%  ISBN-10: 0201835959
-%  ISBN-13: 978-0201835953
-%  Status: Required
-%  25 copies
-
-\noindent{\em The Mythical Man Month}. Frederick P.\ Brooks, Jr.
-Second Edition, ISBN-10: 0201835959, ISBN-13: 978-0201835953, 336 pages, 1985. \\
-(References to the textbook are abbreviated as ``MMM'' in the syllabus and on the Web site).
+\noindent{\em Database Systems Concepts}. Avi Silberschatz, Henry F. Korth, and S. Sudarshan.
+Sixth Edition, ISBN: 0-07-352332-1, 2011. \\
+(References to the textbook are abbreviated as ``DSC'' in the syllabus and on the Web site).
 
 \noindent
 Students who want to improve their technical writing skills may consult the following books.
