Adding in the discussion of the lab and homework assignments.

--- a/syllabus/cs380F2014-syllabus.tex
+++ b/syllabus/cs380F2014-syllabus.tex
@@ -154,15 +154,14 @@ These grading categories have the following definitions:
     students agree that, unless there are extenuating circumstances, they will take the final examination at the
     time stated on the first page of the syllabus.
 
-  \item {\em Laboratory and Homework Assignments}: These assignments invite students to explore the concepts, tools,
-    and techniques that are associated with different phases of the software development life cycle.  All of the
-    laboratory assignments require the use of the provided tools to design, implement, test, and maintain programs
-    that solve important problems.  To ensure that students are ready to develop software in both other classes at
-    Allegheny College and after graduation, the instructor will assign individuals to teams for each of the
-    laboratory assignments.  Unless specified otherwise, each laboratory assignment will be due at the beginning of
-    the next laboratory session.  Many of the laboratory assignments in this course will expect students to
-    give both a presentation and a demonstration of the software that they specified, designed, implemented, tested,
-    and documented.  
+  \item {\em Laboratory and Homework Assignments}: These assignments invite students to explore the concepts, tools, and
+    techniques associated with the management of data.  All of the laboratory assignments require the use of the
+    provided tools to design, implement, and evaluate systems that solve data management problems.  To ensure that
+    students are ready to develop software in both other classes at Allegheny College and after graduation, the
+    instructor will assign individuals to teams for some of the laboratory assignments.  Unless specified otherwise,
+    each laboratory assignment will be due at the beginning of the next laboratory session.  Many of the laboratory
+    assignments in this course will expect students to give both a presentation and a demonstration of the software that
+    they created to manage a collection of data.  
 
     %%% Homework assignments will normally ask students to prepare short written documents reflecting on
     % facets of the software development life cycles.
