Finished the discussion of the final project.

--- a/syllabus/cs380F2014-syllabus.tex
+++ b/syllabus/cs380F2014-syllabus.tex
@@ -166,13 +166,13 @@ These grading categories have the following definitions:
     %%% Homework assignments will normally ask students to prepare short written documents reflecting on
     % facets of the software development life cycles.
 
-    \item {\em Final Project}: This project will present you with the description of a problem and ask you to
-      implement a full-featured solution using one or more programming languages and a wide variety of software
-      development tools.  The final project in this class will require you to apply all of the knowledge and skills
-      that you have accumulated during the course of the semester to solve a problem and, whenever possible,
-      make your solution publicly available as a free and open-source tool.  The project will invite you to draw upon
-      both your problem solving skills and your knowledge of programming languages and software engineering tools. The
-      final project will be completed in groups assigned by the course instructor.
+    \item {\em Final Project}: This project will present you with the description of a problem and ask you to implement
+      a full-featured solution using one or more programming languages and a wide variety of data management systems.
+      The final project in this class will require you to apply all of the knowledge and skills that you have
+      accumulated during the course of the semester to solve a problem and, whenever possible, make your solution
+      publicly available as a free and open-source tool.  The project will invite you to draw upon both your problem
+      solving skills and your knowledge of both programming languages and data management tools. The final project will
+      be completed in groups assigned by the course instructor.
 
   \end{itemize}
 
