Finished a new description of the assignment submission policy.

--- a/syllabus/cs380F2014-syllabus.tex
+++ b/syllabus/cs380F2014-syllabus.tex
@@ -166,121 +166,129 @@ These grading categories have the following definitions:
     %%% Homework assignments will normally ask students to prepare short written documents reflecting on
     % facets of the software development life cycles.
 
-    \item {\em Final Project}: This project will present you with the description of a problem and ask you to implement
-      a full-featured solution using one or more programming languages and a wide variety of data management systems.
-      The final project in this class will require you to apply all of the knowledge and skills that you have
-      accumulated during the course of the semester to solve a problem and, whenever possible, make your solution
-      publicly available as a free and open-source tool.  The project will invite you to draw upon both your problem
-      solving skills and your knowledge of both programming languages and data management tools. The final project will
-      be completed in groups assigned by the course instructor.
+  \item {\em Final Project}: This project will present you with the description of a problem and ask you to implement
+    a full-featured solution using one or more programming languages and a wide variety of data management systems.
+    The final project in this class will require you to apply all of the knowledge and skills that you have
+    accumulated during the course of the semester to solve a problem and, whenever possible, make your solution
+    publicly available as a free and open-source tool.  The project will invite you to draw upon both your problem
+    solving skills and your knowledge of both programming languages and data management tools. The final project will
+    be completed in groups assigned by the course instructor.
 
-  \end{itemize}
+\end{itemize}
 
-  \subsubsection*{Assignment Submission}
+\subsubsection*{Assignment Submission}
 
-  All assignments will have a stated due date. The printed version of the assignment is to be turned in at the beginning
-  of the class on that due date; the printed materials must be dated and signed with the Honor Code pledge of all the
-  students in the group.  When the printed version is submitted, the electronic version of the assignment also must be
-  made available to the course instructor in a version control repository. Late assignments will be accepted for up to one
-  week past the assigned due date with a 10\% penalty. All late assignments must be submitted at the beginning of the
-  session that is scheduled one week after the due date. Unless special arrangements are made with the course instructor,
-  no assignments will be accepted after the late deadline. In addition to submitting the required deliverables for any
-  assignment completed in a group, students must turn in a one-page document that describes each group member's
-  contribution to the submitted deliverables.  
+All assignments will have a stated due date. The printed version of the assignment is to be turned in at the beginning
+of the class on that due date; the printed materials must be dated and signed with the Honor Code pledge of the
+student(s) completing the work.  Late assignments will be accepted for up to one week past the assigned due date with a
+15\% penalty. All late assignments must be submitted at the beginning of the session that is scheduled one week after
+the due date. Unless special arrangements are made with the course instructor, no assignments will be accepted after the
+late deadline. For any assignment completed in a group, students must also turn in a one-page document that describes
+each group member's contribution to the submitted deliverables.  
 
-  \subsubsection*{Attendance}
+% All assignments will have a stated due date. The printed version of the assignment is to be turned in at the beginning
+% of the class on that due date; the printed materials must be dated and signed with the Honor Code pledge of all the
+% student(s) in a group.  When the printed version is submitted, the electronic version of the assignment also must be
+% made available to the course instructor in a version control repository. Late assignments will be accepted for up to
+% one week past the assigned due date with a 15\% penalty. All late assignments must be submitted at the beginning of
+% the session that is scheduled one week after the due date. Unless special arrangements are made with the course
+% instructor, no assignments will be accepted after the late deadline. In addition to submitting the required
+% deliverables for any assignment completed in a group, students must turn in a one-page document that describes each
+% group member's contribution to the submitted deliverables.  
 
-  It is mandatory for all students to attend the class and laboratory sessions. If you will not be able to attend a
-  session, then please see the course instructor at least one week in advance to describe your situation.  Students who
-  miss more than five unexcused classes, laboratory sessions, or group project meetings will have their final grade in the
-  course reduced by one letter grade. Students who miss more than ten of the aforementioned events will automatically fail
-  the course.
+\subsubsection*{Attendance}
 
-  % \subsection*{Laboratory Attendance Policy}
-  % 
-  % In order to acquired the proper skills in technical writing, critical reading, and the presentation of technical
-  % material, it is essential for students to have hands-on experience in a laboratory. Therefore, it is mandatory for all
-  % students to attend the laboratory sessions. If you will not be able to attend a laboratory, then please see the course
-  % instructors at least one week in advance in order to explain your situation. Students who miss more than two unexcused
-  % laboratories will have their final grade in the course reduced by one letter grade.  Students who miss more than four
-  % unexcused laboratories will automatically fail the course.
-  % 
+It is mandatory for all students to attend the class and laboratory sessions. If you will not be able to attend a
+session, then please see the course instructor at least one week in advance to describe your situation.  Students who
+miss more than five unexcused classes, laboratory sessions, or group project meetings will have their final grade in the
+course reduced by one letter grade. Students who miss more than ten of the aforementioned events will automatically fail
+the course.
 
-  \subsubsection*{Use of Laboratory Facilities}
+% \subsection*{Laboratory Attendance Policy}
+% 
+% In order to acquired the proper skills in technical writing, critical reading, and the presentation of technical
+% material, it is essential for students to have hands-on experience in a laboratory. Therefore, it is mandatory for all
+% students to attend the laboratory sessions. If you will not be able to attend a laboratory, then please see the course
+% instructors at least one week in advance in order to explain your situation. Students who miss more than two unexcused
+% laboratories will have their final grade in the course reduced by one letter grade.  Students who miss more than four
+% unexcused laboratories will automatically fail the course.
+% 
 
-  Throughout the semester, we will experiment with many different tools that software engineers use during the phases of
-  the software development life cycle.  The course instructor and the department's systems administrator have invested a
-  considerable amount of time to ensure that our laboratories support the completion of both the laboratory assignments and the
-  final project.  To this end, students are required to complete all assignments and the final project while using the
-  department's laboratory facilities. The course instructor and the systems administrator will only be able to devote a
-  limited amount of time to the configuration of a student's personal computer.
+\subsubsection*{Use of Laboratory Facilities}
 
-  \subsubsection*{Class Preparation}
+Throughout the semester, we will experiment with many different tools that software engineers use during the phases of
+the software development life cycle.  The course instructor and the department's systems administrator have invested a
+considerable amount of time to ensure that our laboratories support the completion of both the laboratory assignments and the
+final project.  To this end, students are required to complete all assignments and the final project while using the
+department's laboratory facilities. The course instructor and the systems administrator will only be able to devote a
+limited amount of time to the configuration of a student's personal computer.
 
-  % The study of the computer science discipline is very challenging.  Students in this class will be challenged to learn
-  % the principles and practice of software development.  During the coming semester even the most diligent student will
-  % experience times of frustration when they are attempting to understand a challenging concept or complete a difficult
-  % laboratory assignment.  In many situations some of the material that we examine will initially be confusing : do not
-  % despair!  Press on and persevere!
-  % 
+\subsubsection*{Class Preparation}
 
-  In order to minimize confusion and maximize learning, students must invest time to prepare for class discussions and
-  lectures.  During the class periods, the course instructor will often pose demanding questions that could require group
-  discussion, the creation of a program or test suite, a vote on a thought-provoking issue, or a group presentation.
-  Only students who have prepared for class by reading the assigned material and reviewing the current assignments will be
-  able to effectively participate in these discussions.  More importantly, only prepared students will be able to acquire
-  the knowledge and skills that are needed to be successful in both this course and the field of software development.  In
-  order to help students remain organized and effectively prepare for classes, the course instructor will maintain a class
-  schedule with reading assignments and presentation slides.   During the class sessions students will also be required to
-  download, use, and modify programs, diagrams, and data sets that are made available through the course Web site.
-  Students who are not comfortable with compiling, editing, and running Java programs should see the course instructor.
+% The study of the computer science discipline is very challenging.  Students in this class will be challenged to learn
+% the principles and practice of software development.  During the coming semester even the most diligent student will
+% experience times of frustration when they are attempting to understand a challenging concept or complete a difficult
+% laboratory assignment.  In many situations some of the material that we examine will initially be confusing : do not
+% despair!  Press on and persevere!
+% 
 
-  \subsubsection*{Email}
+In order to minimize confusion and maximize learning, students must invest time to prepare for class discussions and
+lectures.  During the class periods, the course instructor will often pose demanding questions that could require group
+discussion, the creation of a program or test suite, a vote on a thought-provoking issue, or a group presentation.
+Only students who have prepared for class by reading the assigned material and reviewing the current assignments will be
+able to effectively participate in these discussions.  More importantly, only prepared students will be able to acquire
+the knowledge and skills that are needed to be successful in both this course and the field of software development.  In
+order to help students remain organized and effectively prepare for classes, the course instructor will maintain a class
+schedule with reading assignments and presentation slides.   During the class sessions students will also be required to
+download, use, and modify programs, diagrams, and data sets that are made available through the course Web site.
+Students who are not comfortable with compiling, editing, and running Java programs should see the course instructor.
 
-  Using your Allegheny College email address, I will sometimes send out class announcements about matters such as
-  assignment clarifications or changes in the schedule. It is your responsibility to check your email at least once a day
-  and to ensure that you can reliably send and receive emails. This class policy is based on the following statement in
-  {\em The Compass}, the college's student handbook.
+\subsubsection*{Email}
 
-  \vspace*{-.1in}
-  \begin{quote}
-    ``The use of email is a primary method of communication on campus. \ldots
-    All students are provided with a campus email account and address while
-    enrolled at Allegheny and are expected to check the account on a regular
-    basis.'' 
-  \end{quote}
-  \vspace*{-.15in}
+Using your Allegheny College email address, I will sometimes send out class announcements about matters such as
+assignment clarifications or changes in the schedule. It is your responsibility to check your email at least once a day
+and to ensure that you can reliably send and receive emails. This class policy is based on the following statement in
+{\em The Compass}, the college's student handbook.
 
-  \subsubsection*{Disability Services}
+\vspace*{-.1in}
+\begin{quote}
+  ``The use of email is a primary method of communication on campus. \ldots
+  All students are provided with a campus email account and address while
+  enrolled at Allegheny and are expected to check the account on a regular
+  basis.'' 
+\end{quote}
+\vspace*{-.15in}
 
-  The Americans with Disabilities Act (ADA) is a federal anti-discrimination statute that provides comprehensive civil
-  rights protection for persons with disabilities.  Among other things, this legislation requires all students with
-  disabilities be guaranteed a learning environment that provides for reasonable accommodation of their disabilities.
-  Students with disabilities who believe they may need accommodations in this class are encouraged to contact Disability
-  Services at 332-2898.  Disability Services is part of the Learning Commons and is located in Pelletier Library.
-  Please do this as soon as possible to ensure that approved accommodations are implemented in a timely fashion.
+\subsubsection*{Disability Services}
 
-  \subsubsection*{Honor Code}
+The Americans with Disabilities Act (ADA) is a federal anti-discrimination statute that provides comprehensive civil
+rights protection for persons with disabilities.  Among other things, this legislation requires all students with
+disabilities be guaranteed a learning environment that provides for reasonable accommodation of their disabilities.
+Students with disabilities who believe they may need accommodations in this class are encouraged to contact Disability
+Services at 332-2898.  Disability Services is part of the Learning Commons and is located in Pelletier Library.
+Please do this as soon as possible to ensure that approved accommodations are implemented in a timely fashion.
 
-  The Academic Honor Program that governs the entire academic program at Allegheny College is described in the Allegheny
-  Course Catalogue.  The Honor Program applies to all work that is submitted for academic credit or to meet non-credit
-  requirements for graduation at Allegheny College.  This includes all work assigned for this class (e.g., examinations,
+\subsubsection*{Honor Code}
+
+The Academic Honor Program that governs the entire academic program at Allegheny College is described in the Allegheny
+Course Catalogue.  The Honor Program applies to all work that is submitted for academic credit or to meet non-credit
+requirements for graduation at Allegheny College.  This includes all work assigned for this class (e.g., examinations,
   laboratory assignments, and the final project).  All students who have enrolled in the College will work under the Honor
-  Program.  Each student who has matriculated at the College has acknowledged the following pledge:
+Program.  Each student who has matriculated at the College has acknowledged the following pledge:
 
-  \vspace*{-.1in}
-  \begin{quote}
-    I hereby recognize and pledge to fulfill my responsibilities, as defined in the Honor Code, and to maintain the
-    integrity of both myself and the College community as a whole.  
-  \end{quote}
-  \vspace*{-.15in}
+\vspace*{-.1in}
+\begin{quote}
+  I hereby recognize and pledge to fulfill my responsibilities, as defined in the Honor Code, and to maintain the
+  integrity of both myself and the College community as a whole.  
+\end{quote}
+\vspace*{-.15in}
 
-  \subsection*{Welcome to a Software Engineering Adventure}
+\subsection*{Welcome to a Software Engineering Adventure}
 
-  In reference to software, Frederick Brooks, Jr.\ wrote in Chapter One of MMM, ``The magic of myth and legend has come true
-  in our time.'' Software is a pervasive aspect of our society that changes how we think and act.  High quality software
-  also has the potential to positively influence the lives of people. Moreover, the specification, design, implementation,
-  testing, maintenance, and documentation of software are exciting and rewarding activities!  At the start of this class,
-  I invite you to pursue this adventure in software engineering with enthusiasm and vigor.
+In reference to software, Frederick Brooks, Jr.\ wrote in Chapter One of MMM, ``The magic of myth and legend has come true
+in our time.'' Software is a pervasive aspect of our society that changes how we think and act.  High quality software
+also has the potential to positively influence the lives of people. Moreover, the specification, design, implementation,
+testing, maintenance, and documentation of software are exciting and rewarding activities!  At the start of this class,
+I invite you to pursue this adventure in software engineering with enthusiasm and vigor.
 
-  \end{document}
+\end{document}
