Fixed the welcome message at the end of the assignment.

--- a/syllabus/cs380F2014-syllabus.tex
+++ b/syllabus/cs380F2014-syllabus.tex
@@ -283,12 +283,12 @@ Program.  Each student who has matriculated at the College has acknowledged the 
 \end{quote}
 \vspace*{-.15in}
 
-\subsection*{Welcome to a Software Engineering Adventure}
+\subsection*{Welcome to a Data Management Adventure}
 
-In reference to software, Frederick Brooks, Jr.\ wrote in Chapter One of MMM, ``The magic of myth and legend has come true
-in our time.'' Software is a pervasive aspect of our society that changes how we think and act.  High quality software
-also has the potential to positively influence the lives of people. Moreover, the specification, design, implementation,
-testing, maintenance, and documentation of software are exciting and rewarding activities!  At the start of this class,
-I invite you to pursue this adventure in software engineering with enthusiasm and vigor.
+In reference to software, Frederick Brooks, Jr.\ wrote in Chapter One of MMM, ``The magic of myth and legend has come
+true in our time.'' Software---and the data that frequently drives it---is a pervasive aspect of our society that
+changes how we think and act.  High quality software and well-designed databases also have the potential to positively
+influence the lives of people. Moreover, the collection and maintenance of data is an exciting and rewarding activity!
+At the start of this class, I invite you to pursue this adventure in data management with enthusiasm and vigor.
 
 \end{document}
