Fixed the content that describes the meeting requirements.

--- a/syllabus/cs380F2014-syllabus.tex
+++ b/syllabus/cs380F2014-syllabus.tex
@@ -138,8 +138,8 @@ These grading categories have the following definitions:
   \item {\em Class Participation and Instructor Meetings}: All students are required to actively participate during all
     of the class sessions. Your participation will take forms such as answering questions about the required reading
     assignments, asking constructive questions of the other members of the class, giving presentations, and leading a
-    discussion session. Furthermore, all students are required to meet with the course instructor during office hours
-    for a total of sixty minutes during the Fall 2014 semester.  These meetings must be scheduled through the course
+    discussion session. Moreover, all students are required to meet with the course instructor during office hours
+    for a total of thirty minutes during the Fall 2014 semester.  These meetings must be scheduled through the course
     instructor's reservation system and documented on a meeting record that you submit on the day of the final
     examination. A student will receive an interim and final grade for this category.
 
