Fixed two small mistakes in the syllabus.

--- a/syllabus/cs380F2014-syllabus.tex
+++ b/syllabus/cs380F2014-syllabus.tex
@@ -72,9 +72,9 @@ will enhance their ability to write and speak about software in a clear and conc
 At the completion of this class, a student must be comfortable with fundamental data management topics and be aware of
 current research in the area.  When given a new data management problem, students should be able to select proper data
 management tools and implement a complete application that uses them to solve the stated problem.  Students also must
-develop a toolkit of data management concepts that they can use in the context of the solutions to large real-world
-problems.  Finally, students must develop and apply a strong knowledge of analytical and empirical techniques that they
-can use to characterize and predict the performance of data management systems.
+develop a toolkit of data management concepts that they can use in the context of the solutions to real-world problems.
+Finally, students must develop and apply a strong knowledge of analytical and empirical techniques that they can use to
+characterize and predict the performance of data management systems.
 
 Students should also be able to handle many of the important, yet accidental, aspects of implementing programs with
 modern programming languages and data management systems.  In addition to being comfortable with program editors,
@@ -167,11 +167,11 @@ These grading categories have the following definitions:
     % facets of the software development life cycles.
 
   \item {\em Final Project}: This project will present you with the description of a problem and ask you to implement
-    a full-featured solution using one or more programming languages and a wide variety of data management systems.
+    a full-featured solution using one or more programming languages and a wide variety of data management techniques.
     The final project in this class will require you to apply all of the knowledge and skills that you have
     accumulated during the course of the semester to solve a problem and, whenever possible, make your solution
     publicly available as a free and open-source tool.  The project will invite you to draw upon both your problem
-    solving skills and your knowledge of both programming languages and data management tools. The final project will
+    solving skills and your knowledge of both programming languages and data management systems. The final project will
     be completed in groups assigned by the course instructor.
 
 \end{itemize}
