Finished three small changes to the syllabus.

--- a/syllabus/cs380F2014-syllabus.tex
+++ b/syllabus/cs380F2014-syllabus.tex
@@ -171,7 +171,7 @@ These grading categories have the following definitions:
     The final project in this class will require you to apply all of the knowledge and skills that you have
     accumulated during the course of the semester to solve a problem and, whenever possible, make your solution
     publicly available as a free and open-source tool.  The project will invite you to draw upon both your problem
-    solving skills and your knowledge of both programming languages and data management systems. The final project will
+    solving skills and your knowledge of programming languages and data management systems. The final project will
     be completed in groups assigned by the course instructor.
 
 \end{itemize}
@@ -283,12 +283,13 @@ Program.  Each student who has matriculated at the College has acknowledged the 
 \end{quote}
 \vspace*{-.15in}
 
-\subsection*{Welcome to a Data Management Adventure}
+\subsection*{Welcome to an Adventure in Data Management}
 
-In reference to software, Frederick Brooks, Jr.\ wrote in Chapter One of MMM, ``The magic of myth and legend has come
-true in our time.'' Software---and the data that frequently drives it---is a pervasive aspect of our society that
-changes how we think and act.  High quality software and well-designed databases also have the potential to positively
-influence the lives of people. Moreover, the collection and maintenance of data is an exciting and rewarding activity!
-At the start of this class, I invite you to pursue this adventure in data management with enthusiasm and vigor.
+In reference to software, Frederick Brooks, Jr.\ wrote in {\em The Mythical Man Month}, ``The magic of myth and legend
+has come true in our time.'' Software---and the data that frequently drives it---is a pervasive aspect of our society
+that changes how we think and act.  High quality software and well-designed databases also have the potential to
+positively influence the lives of people. Moreover, the collection and maintenance of data is an exciting and rewarding
+activity!  At the start of this class, I invite you to pursue this adventure in data management with enthusiasm and
+vigor.
 
 \end{document}
