Revised the introductory paragraph in the lab1.

--- a/labs/lab1/cs380F2014-lab1.tex
+++ b/labs/lab1/cs380F2014-lab1.tex
@@ -15,9 +15,9 @@ Practicing data management professionals use a wide variety of tools to manage d
 the management of files, many people will use a version control system like Git.  In this course, we will always use the
 Git distributed version control system to manage the files associated with our laboratory assignments and the final
 project.  In this laboratory assignment, you will learn how to use the Bitbucket service for managing Git repositories
-and the {\tt git} command-line tool in the Ubuntu Linux operating system. After connecting to the course's Git
-repository and creating your own repository, you will use a text editor to prepare a brief report on the features and
-installation procedures associate with data management tools.
+and the {\tt git} command-line tool in the Ubuntu operating system. After connecting to the course's Git
+repository, sharing it with the course instructor, and creating your own repository, you will use a text editor to
+prepare a brief report on the features and installation procedures associate with data management tools.
 
 \section*{Configuring Git and Bitbucket}
 
